fixed the invisible input bug

--- a/src/components/UploadButton/UploadButton.css
+++ b/src/components/UploadButton/UploadButton.css
@@ -12,7 +12,7 @@
 .txtGradient{
     color: var(--indian-red);
 }
-input{
+.uploadButtonInput{
     display: none;
 }
 
